force-app/main/default/objects/ampi__Indicator__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care Promise Indicator</fullName>
            </value>
            <value>
                <fullName>Data Collection Possible via PDB2</fullName>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>