force-app/main/default/objects/ampi__Indicator__c/fields/Source_Document__c.field-meta.xml
<CustomField>
    <fullName>Source_Document__c</fullName>
    <label>Source Document</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Statistics Handbook V3</fullName>
                <default>true</default>
                <label>Statistics Handbook V3</label>
            </value>
            <value>
                <fullName>2030 Measures Project</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Case Management and SDGs Indicators Monitored in PDB2</fullName>
            </value>
            <value>
                <fullName>SOS Care Promise Indicators Booklet</fullName>
            </value>
            <value>
                <fullName>Case Management and SDGs Indicators Monitored in PDB3</fullName>
            </value>
            <value>
                <fullName>Statistics Handbook Version Nov 2017</fullName>
            </value>
            <value>
                <fullName>Statistics Handbook Version 3 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>