force-app/main/default/objects/ampi__Indicator__c/fields/Source_of_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Indicator__c</fullName>
    <label>Source of Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDB2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>