force-app/main/default/objects/ampi__Indicator__c/fields/Strategic_Measure__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Measure__c</fullName>
    <label>Strategic Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>