force-app/main/default/objects/ampi__Indicator__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>ampi__Description__c</columns>
    <columns>Category__c</columns>
    <columns>Level__c</columns>
    <columns>ampi__Data_Type__c</columns>
    <columns>Source_Document__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>