force-app/main/default/objects/ampi__Indicator__c/listViews/Catalog_Indicators.listView-meta.xml
<ListView>
    <fullName>Catalog_Indicators</fullName>
    <columns>NAME</columns>
    <columns>ampi__Description__c</columns>
    <columns>Category__c</columns>
    <columns>Level__c</columns>
    <columns>ampi__Data_Type__c</columns>
    <columns>Source_Document__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ampi__Type__c</columns>
    <columns>ampi__Description_Translated__c</columns>
    <columns>ampi__Include_In_Catalog__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Include_In_Catalog__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Source_of_Indicator__c</field>
        <operation>equals</operation>
        <value>PDB2</value>
    </filters>
    <label>Catalogue Indicators</label>
</ListView>