force-app/main/default/objects/ampi__Indicator__c/listViews/Project_Indicators.listView-meta.xml
<ListView>
    <fullName>Project_Indicators</fullName>
    <columns>NAME</columns>
    <columns>ampi__Description__c</columns>
    <columns>Category__c</columns>
    <columns>Level__c</columns>
    <columns>ampi__Data_Type__c</columns>
    <columns>Source_Document__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ampi__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Include_In_Catalog__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Custom Project Indicators</label>
</ListView>