force-app/main/default/objects/ampi__Indicator__c/listViews/SKF_Catalogue_Indicators.listView-meta.xml
<ListView>
    <fullName>SKF_Catalogue_Indicators</fullName>
    <columns>ampi__Active__c</columns>
    <columns>NAME</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Include_In_Catalog__c</columns>
    <columns>ampi__Target_Frequency__c</columns>
    <columns>ampi__Reporting_Frequency__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ampi__Targets_Are_Disaggregated__c</columns>
    <columns>ampi__Geographical_Disaggregation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Mandatory</value>
    </filters>
    <label>SKF Indicators</label>
</ListView>