force-app/main/default/objects/ampi__Indicator__c/listViews/SKF_V3.listView-meta.xml
<ListView>
    <fullName>SKF_V3</fullName>
    <columns>NAME</columns>
    <columns>ampi__Description__c</columns>
    <columns>Category__c</columns>
    <columns>Level__c</columns>
    <columns>ampi__Data_Type__c</columns>
    <columns>Source_Document__c</columns>
    <columns>ampi__Calculate_Total__c</columns>
    <columns>ampi__Type__c</columns>
    <columns>ampi__Description_Translated__c</columns>
    <columns>ampi__Target_Frequency__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ampi__Disaggregation_Group__c</columns>
    <columns>ampi__Geographical_Disaggregation__c</columns>
    <columns>ampi__Number_Of_Decimal_Places_Allowed__c</columns>
    <columns>ampi__Cross_Disaggregation_by_Sex__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ampi__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Mandatory</value>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Participants,Former participants,Households,Former households,Staff</value>
    </filters>
    <filters>
        <field>Source_Document__c</field>
        <operation>equals</operation>
        <value>Statistics Handbook V3</value>
    </filters>
    <label>SKF V3</label>
</ListView>